[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# clang = "2.0.0"
# getrandom = { version = "0.2.8", features = ["js"] }
wasm-bindgen = "0.2.83"
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"
# wasm-pack = "0.10.3"
